# cosmic-mail

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
i18n/de/: cosmic_mail.ftl
i18n/en/: cosmic_mail.ftl
i18n/tr/: cosmic_mail.ftl
resources/: cosmic-mail.desktop  tb-tray-settings.desktop  tb-tray.desktop
src/: accounts.rs  autostart.rs  config.rs  lib.rs  localize.rs  main.rs  paths.rs  secrets.rs  settings.rs  settings_ui.rs
